1.0.3
--------------------------------

- refine termination some more: CTRL-C and gateway.exit will 
  now try harder to interrupt remote execution.  this 
  helps to avoid left-over ssh-processes.
- Windows/python2.4: fix bug that killing subprocesses would fail
- fix some doc issues (thanks thm and ronny), add ssh_fileserver example
- update apipkg
- always skip remote tests if not ssh specs given
- fix/refine some tests 
- fix typo and bug on windows/python2.4

1.0.2 
--------------------------------

- generalize channel-over-channel sending: you can now have channels 
  anywhere in a data structure (i.e. as an item of a container type).
  Add according examples.

- automatically close a channel when a remote callback raises 
  an exception, makes communication more robust because until 
  now failing callbacks rendered the receiverthread unuseable 
  leaving the remote side in-accessible.

- internally split socket gateways, speeds up popen-gateways
  by 10% (now at <50 milliseconds per-gateway on a 1.5 GHZ machine) 

- fix bug in channel.receive() that would wrongly raise a TimeoutError 
  after 1000 seconds (thanks Ronny Pfannschmidt) 

1.0.1
--------------------------------

- revamp and better structure documentation

- new method: gateway.hasreceiver() returns True 
  if the gateway is still receive-active. remote_status
  now only carries information about remote execution status.

- new: execnet.MultiChannel provides basic iteration/contain interface

- new: execnet.Group can be indexed by integer

- new: group.makegateway() uses group.default_spec if no spec is given
  and the execnet.default_group uses ``popen`` as a default spec. 

- have popen-gateways use imports instead of source-strings,
  also improves debugging/tracebacks, as a side effect
  popen-gateway startup can be substantially faster (>30%)

- refine internal gateway exit/termination procedure
  and introduce group.terminate(timeout) which will